[project]
name = "day5-rag-memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "faiss-cpu>=1.14.2",
    "google-generativeai>=0.8.6",
    "numpy>=2.4.6",
    "pypdf>=6.13.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
]
